fix(styles): adjust toolbarbutton margin for consistent alignment

--- a/src/browser/base/content/zen-styles/zen-workspaces.css
+++ b/src/browser/base/content/zen-styles/zen-workspaces.css
@@ -26,7 +26,7 @@
   gap: 3px;
 
   & toolbarbutton {
-    margin: auto;
+    margin: 0;
     width: 25px;
     display: flex;
     justify-content: center;
